welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:3: error: ';' expected but identifier found.
}avance()
 ^